# agentic-agency

./: .gitignore  pyproject.toml
app/: config.py  main.py  state.py
app/graph/: build_graph.py  nodes.py
app/llm/: base.py  factory.py  ollama_provider.py  openai_provider.py
app/tools/: web_search.py  web_search_tool.py
