[project]
name = "football-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "psycopg[binary]>=3.2.0",
  "langgraph-checkpoint-postgres>=3.0.2",

  # Providers (switchable)
  "langchain-openai>=0.2.0",
  "langchain-ollama>=0.2.0",
  "ddgs>=9.10.0",
  "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []